--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body{
   background: #131723;
+  overflow-x: hidden;
 }
 .history li{
   position: relative;
@@ -32,4 +33,36 @@ body{
 }
 .mobile img{
   height: 355px;
+}
+.navigation  a{
+  text-decoration: none;
+}
+#about .buttons a{
+  text-decoration: none;
+  margin-right: 20px
+}
+.projects a{
+  text-decoration: none;
+}
+.projects li span{
+  cursor: pointer;
+}
+.innerbox svg{
+  width: 2.5rem;
+    margin: auto;
+    color: #34d399;
+    margin-bottom: 15px;
+}
+
+@media(max-width: 767px){
+  .navigation  a{
+    padding: 5px 18px !important;
+    text-align: center;
+  }
+  #about .buttons a{
+    margin-bottom: 15px;
+  }
+  .innerbox{
+    margin-bottom: 15px;
+  }
 }
